[package]
name = "sqlgrep"
version = "0.2.0"
description = "Grep SQL databases for fun and profit."
readme = "doc/CRATE.md"
edition = "2021"
license = "Apache-2.0"
authors = ["Eir Nym <eirnym@gmail.com>"]
repository = "https://github.com/eirtools/sqlgrep"

[dependencies]
sqlx = { version = "=0.8.5", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
sqlparser = { version = "=0.56.0" }
chrono = { version = "=0.4.41", features = ["alloc"] }
log = { version = "0.4.27" }
futures = { version = "=0.3.31", features = ["async-await"] }
clap = { version = "4.5.45", features = ["derive", "wrap_help"] }
indoc = { version = "2.0.6" }
stderrlog = { version = "=0.6.0" }
regex = { version = "1.11.1" }
